# aws-bedrock-core-test

./: .bedrock_agentcore.yaml  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  my_agent.py  pyproject.toml
agent/: __init__.py  auth.py  config.py  mcp_client.py
docs/: agentcore-deployment.md  aws-cli-authentication.md  secrets-management.md  strands.md  uv-and-agentcore.md
docs/todo/: PLAN.md  gitlab-plan.md
